--- a/src/crafts/abashevskaya-toy.html
+++ b/src/crafts/abashevskaya-toy.html
@@ -232,19 +232,16 @@
                     Мастер залезал в&nbsp;горн, а&nbsp;его жена подавала ему
                     сверху кувшины и&nbsp;горшки. Сверху изделия закладывали
                     &laquo;каланчиками&raquo; (осколками битой посуды). Обжигали
-                    глиняные изделия березовыми или дубовыми дровами. После
-                    окончания обжига традиционно пекли картошку.
+                    глиняные изделия березовыми или дубовыми дровами.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 2/2</p>
                   <p class="A_CraftBodyText -w780">
-                    Лечебная глина, используемая для лепки Абашевской игрушки,
-                    и&nbsp;доброта, вложенная руками мастера, снимает тревогу,
-                    стрессы, оберегает семью от&nbsp;дурного, от&nbsp;темных
-                    сил. Чудесная Абашевская игрушка не&nbsp;оставляет
-                    равнодушным никого.
+                    После обжига изделия покрывают краской. Наиболее
+                    распространённые цвета: красный, зелёный, синий;
+                    используется золотая краска для некоторых элементов.
                   </p>
                 </div>
               </div>
@@ -316,18 +313,20 @@
               Связанные подборки и&nbsp;статьи
             </h2>
             <div class="C_TeaserCards">
-              <div class="M_TeaserCard">
+              <div class="M_TeaserCard -bones">
                 <h6 class="A_TeaserCardTitle">
                   У&nbsp;каких народов есть резьба по&nbsp;кости
                 </h6>
               </div>
-              <div class="M_TeaserCard">
+
+              <div class="M_TeaserCard -nord">
                 <h6 class="A_TeaserCardTitle">
                   Ремесло и&nbsp;искусство за&nbsp;полярным кругом
                 </h6>
               </div>
-              <div class="M_TeaserCard">
-                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
+
+              <div class="M_TeaserCard -toys">
+                <h6 class="A_TeaserCardTitle">Игрушки с&nbsp;историей</h6>
               </div>
             </div>
           </div>
