--- a/src/crafts/dimskaya-toy.html
+++ b/src/crafts/dimskaya-toy.html
@@ -18,10 +18,7 @@
       property="og:url"
       content="https://russiancrafts.adc.ac/crafts/skopinsk-ceramic"
     />
-    <meta
-      property="og:title"
-      content="Дымская игрушка • Ремёсла России"
-    />
+    <meta property="og:title" content="Дымская игрушка • Ремёсла России" />
     <meta
       property="og:description"
       content="Материал о дымской игрушке. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
@@ -37,10 +34,7 @@
       property="twitter:url"
       content="https://russiancrafts.adc.ac/crafts/skopinsk-ceramic"
     />
-    <meta
-      property="twitter:title"
-      content="Дымская игрушка • Ремёсла России"
-    />
+    <meta property="twitter:title" content="Дымская игрушка • Ремёсла России" />
     <meta
       property="twitter:description"
       content="Материал о дымской игрушке. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
@@ -83,12 +77,14 @@
           <a class="W_CraftLeadDescriptionMap" href="../map.html"
             ><div class="Q_Icon -MapPoint -size48x48"></div>
             <p class="A_CraftLeadDescriptionLocation">
-                слобода Дымково, Киров
+              слобода Дымково, Киров
             </p></a
           >
           <div class="C_CraftLeadDescriptionTags">
             <a class="A_TagButtonArticle" href="../crafts.html">игрушка</a>
-            <a class="A_TagButtonArticle" href="../crafts.html">глина(керамика)</a>
+            <a class="A_TagButtonArticle" href="../crafts.html"
+              >глина(керамика)</a
+            >
           </div>
         </div>
       </div>
@@ -99,9 +95,10 @@
       <section class="W_CraftContent -Center">
         <div class="M_CraftAbout">
           <h5 class="A_CraftAboutText -w580">
-            В&nbsp;день Ярила участники праздника перекидывались расписными шариками 
-            из&nbsp;глины и&nbsp;вовсю использовали глиняные свистульки. 
-            Именно это и&nbsp;стало причиной появления обрядовых аксессуаров, среди которых почетное место заняла дымковская игрушка.
+            В&nbsp;день Ярила участники праздника перекидывались расписными
+            шариками из&nbsp;глины и&nbsp;вовсю использовали глиняные
+            свистульки. Именно это и&nbsp;стало причиной появления обрядовых
+            аксессуаров, среди которых почетное место заняла дымковская игрушка.
           </h5>
           <img
             class="Q_CraftAboutImage -w380"
@@ -114,12 +111,14 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Особенности</h2>
             <p class="A_CraftBodyText -w580">
-                Дымковская игрушка&nbsp;&mdash; самый известный 
-                из&nbsp;глиняных промыслов России. Она отличается предельно простой, 
-                ясной пластической формой, обобщенностью силуэта, яркой орнаментной росписью по&nbsp;белому фону. 
-                В&nbsp;образах краснощеких барынь, кормилиц, лихих всадников, сценах чаепитий, ярмарочных гуляний, 
-                веселых каруселях&nbsp;&mdash; продолжают жить трехсотлетние традиции дымковского искусства, 
-                бережно сохраняется архаика древних образцов.
+              Дымковская игрушка&nbsp;&mdash; самый известный из&nbsp;глиняных
+              промыслов России. Она отличается предельно простой, ясной
+              пластической формой, обобщенностью силуэта, яркой орнаментной
+              росписью по&nbsp;белому фону. В&nbsp;образах краснощеких барынь,
+              кормилиц, лихих всадников, сценах чаепитий, ярмарочных гуляний,
+              веселых каруселях&nbsp;&mdash; продолжают жить трехсотлетние
+              традиции дымковского искусства, бережно сохраняется архаика
+              древних образцов.
             </p>
           </div>
 
@@ -157,10 +156,17 @@
             <div class="M_CraftBodyTexts -Left100">
               <h2 class="A_CraftBodySubtitle">История</h2>
               <p class="A_CraftBodyText -w580">
-                Четыреста лет развивался дымковский промысел. 
-                За&nbsp;это время сложились свои темы, образы, характерные рисунки. Тут не&nbsp;нашлось места невыразительным орнаментам или тусклым оттенкам. Дымковская игрушка&nbsp;&mdash; это воплощение жизни в&nbsp;самых радостных красках. 
-                Не&nbsp;удивительно, что к&nbsp;началу 19&nbsp;века свистульки из&nbsp;Дымкова завоевали любовь жителей всей России. В&nbsp;год производилось больше 100 тысяч игрушек, которые продавались в&nbsp;столице 
-                и&nbsp;Оренбургской губернии. Над их&nbsp;созданием работали 59&nbsp;семей из&nbsp;Дымково. Среди самых известных фамилий звучали Кошкины, Никулины.
+                Четыреста лет развивался дымковский промысел. За&nbsp;это время
+                сложились свои темы, образы, характерные рисунки. Тут
+                не&nbsp;нашлось места невыразительным орнаментам или тусклым
+                оттенкам. Дымковская игрушка&nbsp;&mdash; это воплощение жизни
+                в&nbsp;самых радостных красках. Не&nbsp;удивительно, что
+                к&nbsp;началу 19&nbsp;века свистульки из&nbsp;Дымкова завоевали
+                любовь жителей всей России. В&nbsp;год производилось больше 100
+                тысяч игрушек, которые продавались в&nbsp;столице
+                и&nbsp;Оренбургской губернии. Над их&nbsp;созданием работали
+                59&nbsp;семей из&nbsp;Дымково. Среди самых известных фамилий
+                звучали Кошкины, Никулины.
               </p>
             </div>
             <div class="M_CraftBodyMap">
@@ -188,7 +194,8 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Техника изготовления</h2>
             <p class="A_CraftBodyText -w680">
-                Для создания фигурки используется глина и&nbsp;речной песок. По&nbsp;правилам, это должна быть вятская красная глина.
+              Для создания фигурки используется глина и&nbsp;речной песок.
+              По&nbsp;правилам, это должна быть вятская красная глина.
             </p>
           </div>
 
@@ -214,10 +221,10 @@
                     alt=""
                   />
                   <img
-                  class="Q_SliderPic"
-                  src="../images/craft/dimskaya-toy/slider-img4.jpg"
-                  alt=""
-                />
+                    class="Q_SliderPic"
+                    src="../images/craft/dimskaya-toy/slider-img4.jpg"
+                    alt=""
+                  />
                 </div>
               </div>
               <div class="Q_Icon -ArrowRight -size48x48"></div>
@@ -228,16 +235,21 @@
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 1/4</p>
                   <p class="A_CraftBodyText -w780">
-                    Каждая деталь игрушки создается отдельно: из&nbsp;шарообразного комка глины формируется тело, на&nbsp;которое &laquo;собираются&raquo; остальные части (ножки, ручки, голова, аксессуары и&nbsp;т.д.). Все детали должны скрепляться с&nbsp;плавными переходами. 
-                    Это помогает избегать сколов в&nbsp;будущем.
+                    Каждая деталь игрушки создается отдельно:
+                    из&nbsp;шарообразного комка глины формируется тело,
+                    на&nbsp;которое &laquo;собираются&raquo; остальные части
+                    (ножки, ручки, голова, аксессуары и&nbsp;т.д.). Все детали
+                    должны скрепляться с&nbsp;плавными переходами. Это помогает
+                    избегать сколов в&nbsp;будущем.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 2/4</p>
                   <p class="A_CraftBodyText -w780">
-                    Готовый образ сушиться на&nbsp;открытом воздухе несколько суток. Затем обжигается 
-                    на&nbsp;огне. Раньше для этого использовали русскую печь. Сегодня&nbsp;&mdash; муфельную, 
+                    Готовый образ сушиться на&nbsp;открытом воздухе несколько
+                    суток. Затем обжигается на&nbsp;огне. Раньше для этого
+                    использовали русскую печь. Сегодня&nbsp;&mdash; муфельную,
                     где температура достигает 1000С.
                   </p>
                 </div>
@@ -245,20 +257,22 @@
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 3/4</p>
                   <p class="A_CraftBodyText -w780">
-                    Когда заготовка остывает, ее&nbsp;отбеливают темперными красками. Наши предки 
-                    для этой цели использовали молоко.
+                    Когда заготовка остывает, ее&nbsp;отбеливают темперными
+                    красками. Наши предки для этой цели использовали молоко.
                   </p>
                 </div>
                 <div class="W_SliderDescriptionTexts">
-                    <p class="A_SliderDescriptionCounter">этап 4/4</p>
-                    <p class="A_CraftBodyText -w780">
-                        На&nbsp;следующем этапе создания игрушки&nbsp;&mdash; раскраске, используются только чистые цвета без смешивания. 
-                        В&nbsp;старину для этого брали естественные красители 
-                        на&nbsp;основе яиц, молока, сажи, уксуса, темперы. 
-                        Сегодня есть готовые акриловые краски. Главное требование: яркость и&nbsp;естественность. 
-                        Обязательно использование золотой потали для отдельных деталей.
-                    </p>
-                  </div>
+                  <p class="A_SliderDescriptionCounter">этап 4/4</p>
+                  <p class="A_CraftBodyText -w780">
+                    На&nbsp;следующем этапе создания игрушки&nbsp;&mdash;
+                    раскраске, используются только чистые цвета без смешивания.
+                    В&nbsp;старину для этого брали естественные красители
+                    на&nbsp;основе яиц, молока, сажи, уксуса, темперы. Сегодня
+                    есть готовые акриловые краски. Главное требование: яркость
+                    и&nbsp;естественность. Обязательно использование золотой
+                    потали для отдельных деталей.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -269,21 +283,27 @@
 
           <ul class="C_CraftBodyListItems">
             <li class="A_CraftBodyListItem">
-              <a href="https://www.culture.ru/institutes/10883/kirovskii-oblastnoi-kraevedcheskii-muzei-im-p-v-alabina" target="_blank"
+              <a
+                href="https://www.culture.ru/institutes/10883/kirovskii-oblastnoi-kraevedcheskii-muzei-im-p-v-alabina"
+                target="_blank"
                 >музей им. П.В. Алабина (Киров)</a
               >
             </li>
 
             <li class="A_CraftBodyListItem">
-              <a href="https://www.culture.ru/institutes/10098/vserossiiskii-muzei-dekorativnogo-iskusstva" target="_blank"
+              <a
+                href="https://www.culture.ru/institutes/10098/vserossiiskii-muzei-dekorativnogo-iskusstva"
+                target="_blank"
                 >Всероссийский музей декоративного искусства</a
               >
             </li>
             <li class="A_CraftBodyListItem">
-                <a href="https://www.culture.ru/institutes/10365/muzei-igrushki-g-sergiev-posad" target="_blank"
-                  >Музей игрушки г. Сергиев Посад</a
-                >
-              </li>
+              <a
+                href="https://www.culture.ru/institutes/10365/muzei-igrushki-g-sergiev-posad"
+                target="_blank"
+                >Музей игрушки г. Сергиев Посад</a
+              >
+            </li>
           </ul>
         </div>
 
@@ -329,18 +349,20 @@
               Связанные подборки и&nbsp;статьи
             </h2>
             <div class="C_TeaserCards">
-              <div class="M_TeaserCard">
+              <div class="M_TeaserCard -bones">
                 <h6 class="A_TeaserCardTitle">
                   У&nbsp;каких народов есть резьба по&nbsp;кости
                 </h6>
               </div>
-              <div class="M_TeaserCard">
+
+              <div class="M_TeaserCard -nord">
                 <h6 class="A_TeaserCardTitle">
                   Ремесло и&nbsp;искусство за&nbsp;полярным кругом
                 </h6>
               </div>
-              <div class="M_TeaserCard">
-                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
+
+              <div class="M_TeaserCard -toys">
+                <h6 class="A_TeaserCardTitle">Игрушки с&nbsp;историей</h6>
               </div>
             </div>
           </div>
@@ -350,8 +372,7 @@
               <h2 class="A_CraftBodySubtitle">Тэги:</h2>
               <p class="A_CraftEndTagsSearch">
                 <span><a href="#">игрушка</a></span>
-                <span><a href="#">глина(керамика)</a></span
-                >
+                <span><a href="#">глина(керамика)</a></span>
               </p>
             </div>
 
