--- a/src/crafts/rakul-painting.html
+++ b/src/crafts/rakul-painting.html
@@ -18,10 +18,7 @@
       property="og:url"
       content="https://russiancrafts.adc.ac/crafts/rakul-painting"
     />
-    <meta
-      property="og:title"
-      content="Ракульская роспись • Ремёсла России"
-    />
+    <meta property="og:title" content="Ракульская роспись • Ремёсла России" />
     <meta
       property="og:description"
       content="Материал о ракульской росписи. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
@@ -83,7 +80,7 @@
           <a class="W_CraftLeadDescriptionMap" href="../map.html"
             ><div class="Q_Icon -MapPoint -size48x48"></div>
             <p class="A_CraftLeadDescriptionLocation">
-                Северной Двины, р. Ракулка
+              Северной Двины, р. Ракулка
             </p></a
           >
           <div class="C_CraftLeadDescriptionTags">
@@ -99,9 +96,11 @@
       <section class="W_CraftContent -Center">
         <div class="M_CraftAbout">
           <h5 class="A_CraftAboutText -w580">
-            Один из&nbsp;притоков Северной Двины, река Ракулка, стала географическим центром старинного русского промысла. 
-            На&nbsp;берегу этой реки стоит деревня Ульяновская, здесь 
-            и&nbsp;появилась одна из&nbsp;золотых страничек народного русского творчества&nbsp;&mdash; ракульская роспись.
+            Один из&nbsp;притоков Северной Двины, река Ракулка, стала
+            географическим центром старинного русского промысла. На&nbsp;берегу
+            этой реки стоит деревня Ульяновская, здесь и&nbsp;появилась одна
+            из&nbsp;золотых страничек народного русского творчества&nbsp;&mdash;
+            ракульская роспись.
           </h5>
           <img
             class="Q_CraftAboutImage -w380"
@@ -114,11 +113,12 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Особенности</h2>
             <p class="A_CraftBodyText -w580">
-                Мотивы ракульских изображения не&nbsp;особенно оригинальны. Чаще всего это либо растительный орнамент 
-                с&nbsp;переплетением ветвей и&nbsp;листьев, либо крупная листва 
-                на&nbsp;кустиках, либо стилизованные птицы. Но&nbsp;на&nbsp;деревянных досках, 
-                подносах, прялках и&nbsp;набирухах эти знакомые, типичные для народной росписи мотивы смотрятся очень нарядно, 
-                динамично, певуче.
+              Мотивы ракульских изображения не&nbsp;особенно оригинальны. Чаще
+              всего это либо растительный орнамент с&nbsp;переплетением ветвей
+              и&nbsp;листьев, либо крупная листва на&nbsp;кустиках, либо
+              стилизованные птицы. Но&nbsp;на&nbsp;деревянных досках, подносах,
+              прялках и&nbsp;набирухах эти знакомые, типичные для народной
+              росписи мотивы смотрятся очень нарядно, динамично, певуче.
             </p>
           </div>
 
@@ -157,10 +157,14 @@
               <h2 class="A_CraftBodySubtitle">История</h2>
               <p class="A_CraftBodyText -w580">
                 В&nbsp;период своего расцвета и&nbsp;ракульское направление
-                не&nbsp;уступало более известным &laquo;соседям&raquo;. Его история 
-                не&nbsp;такая древняя, как у&nbsp;многих других течений: ранние работы относят 
-                к&nbsp;середине 19&nbsp;века, а&nbsp;затухание промысла связывают с&nbsp;30-ми годами прошлого столетия.
+                не&nbsp;уступало более известным &laquo;соседям&raquo;. Его
+                история не&nbsp;такая древняя, как у&nbsp;многих других течений:
+                ранние работы относят к&nbsp;середине 19&nbsp;века,
+                а&nbsp;затухание промысла связывают с&nbsp;30-ми годами прошлого
+                столетия.
+              </p>
             </div>
+
             <div class="M_CraftBodyMap">
               <img
                 class="Q_CraftBodyMapImage"
@@ -186,9 +190,10 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Техника изготовления</h2>
             <p class="A_CraftBodyText -w680">
-                Ракульская роспись&nbsp;&mdash; урок ИЗО для тех, кто только начинает в&nbsp;ней разбираться. 
-                Рассмотрим на&nbsp;примере, как следует рисовать птицу. Для начала опишем птиц, которые чаще всего изображаются 
-                на&nbsp;различных предметах быта.
+              Ракульская роспись&nbsp;&mdash; урок ИЗО для тех, кто только
+              начинает в&nbsp;ней разбираться. Рассмотрим на&nbsp;примере, как
+              следует рисовать птицу. Для начала опишем птиц, которые чаще всего
+              изображаются на&nbsp;различных предметах быта.
             </p>
           </div>
 
@@ -218,18 +223,24 @@
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 1/2</p>
                   <p class="A_CraftBodyText -w780">
-                    Обычно это маленькая птичка с&nbsp;ещё меньшей головкой, которая украшена цветным хохолком. 
-                    Тело птичке небольшое, но&nbsp;грузное. Одно крыло приподнято вверх. Рисуется крылышко в&nbsp;
-                    виде тонкой изогнутой линии с&nbsp;множеством штрихов, которые изображают перья.
+                    Обычно это маленькая птичка с&nbsp;ещё меньшей головкой,
+                    которая украшена цветным хохолком. Тело птичке небольшое,
+                    но&nbsp;грузное. Одно крыло приподнято вверх. Рисуется
+                    крылышко в&nbsp; виде тонкой изогнутой линии
+                    с&nbsp;множеством штрихов, которые изображают перья.
+                  </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 2/2</p>
                   <p class="A_CraftBodyText -w780">
-                    Рисунок обводится черным контуром. Мелкая штриховка не&nbsp;должна быть видна, поэтому её&nbsp;
-                    следует использовать только на&nbsp;внутренних частях изображений. Если выбранная птица&nbsp;&mdash; сорока, 
-                    то&nbsp;черный и&nbsp;белый цвета должны гармонично сочетаться. Если&nbsp;же изображается курица, 
-                    то&nbsp;рисунок должен быть не&nbsp;только крупнее, но&nbsp;и&nbsp;много ярче.
+                    Рисунок обводится черным контуром. Мелкая штриховка
+                    не&nbsp;должна быть видна, поэтому её&nbsp; следует
+                    использовать только на&nbsp;внутренних частях изображений.
+                    Если выбранная птица&nbsp;&mdash; сорока, то&nbsp;черный
+                    и&nbsp;белый цвета должны гармонично сочетаться.
+                    Если&nbsp;же изображается курица, то&nbsp;рисунок должен
+                    быть не&nbsp;только крупнее, но&nbsp;и&nbsp;много ярче.
                   </p>
                 </div>
               </div>
@@ -279,18 +290,20 @@
               Связанные подборки и&nbsp;статьи
             </h2>
             <div class="C_TeaserCards">
-              <div class="M_TeaserCard">
+              <div class="M_TeaserCard -bones">
                 <h6 class="A_TeaserCardTitle">
                   У&nbsp;каких народов есть резьба по&nbsp;кости
                 </h6>
               </div>
-              <div class="M_TeaserCard">
+
+              <div class="M_TeaserCard -nord">
                 <h6 class="A_TeaserCardTitle">
                   Ремесло и&nbsp;искусство за&nbsp;полярным кругом
                 </h6>
               </div>
-              <div class="M_TeaserCard">
-                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
+
+              <div class="M_TeaserCard -toys">
+                <h6 class="A_TeaserCardTitle">Игрушки с&nbsp;историей</h6>
               </div>
             </div>
           </div>
@@ -301,7 +314,7 @@
               <p class="A_CraftEndTagsSearch">
                 <span><a href="#">роспись</a></span
                 >,<span><a href="#">дерево</a></span
-                    >,
+                >,
               </p>
             </div>
 
