--- a/src/crafts/uelen-bone-carving.html
+++ b/src/crafts/uelen-bone-carving.html
@@ -208,7 +208,7 @@
                 <div class="W_SliderRails">
                   <img
                     class="Q_SliderPic"
-                    src="../images/craft/uelen-bone-carving/slider-img1.png"
+                    src="../images/craft/uelen-bone-carving/slider-img1.jpg"
                     alt=""
                   />
                   <img
@@ -221,11 +221,6 @@
                     src="../images/craft/uelen-bone-carving/slider-img3.jpg"
                     alt=""
                   />
-                  <img
-                    class="Q_SliderPic"
-                    src="../images/craft/uelen-bone-carving/slider-img4.jpg"
-                    alt=""
-                  />
                 </div>
               </div>
               <div class="Q_Icon -ArrowRight -size48x48"></div>
@@ -234,38 +229,26 @@
             <div class="M_SliderDescription">
               <div class="W_SliderDescriptionRails">
                 <div class="W_SliderDescriptionTexts">
-                  <p class="A_SliderDescriptionCounter">этап 1/4</p>
+                  <p class="A_SliderDescriptionCounter">этап 1/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
-                    написано о&nbsp;поэтапной технике изготовления изделий
-                    первый этап здесь
+                    Сначала — грубая обработка материала кости. Затем на
+                    заготовку карандашом наносится эскиз будущей работы
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
-                  <p class="A_SliderDescriptionCounter">этап 2/4</p>
+                  <p class="A_SliderDescriptionCounter">этап 2/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
-                    написано о&nbsp;поэтапной технике изготовления изделий
-                    второй этап здесь
+                    Затем следует более деликатная обработка, создание итоговой
+                    формы. На этом этапе используются фрезы и боры
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
-                  <p class="A_SliderDescriptionCounter">этап 3/4</p>
+                  <p class="A_SliderDescriptionCounter">этап 3/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
-                    написано о&nbsp;поэтапной технике изготовления изделий
-                    третий этап здесь
-                  </p>
-                </div>
-
-                <div class="W_SliderDescriptionTexts">
-                  <p class="A_SliderDescriptionCounter">этап 4/4</p>
-                  <p class="A_CraftBodyText -w780">
-                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
-                    написано о&nbsp;поэтапной технике изготовления изделий
-                    четвёртый этап здесь
+                    И последний этап — сборка и покраска изделия, это зависит от
+                    задумки мастера
                   </p>
                 </div>
               </div>
@@ -342,18 +325,20 @@
               Связанные подборки и&nbsp;статьи
             </h2>
             <div class="C_TeaserCards">
-              <div class="M_TeaserCard">
+              <div class="M_TeaserCard -bones">
                 <h6 class="A_TeaserCardTitle">
                   У&nbsp;каких народов есть резьба по&nbsp;кости
                 </h6>
               </div>
-              <div class="M_TeaserCard">
+
+              <div class="M_TeaserCard -nord">
                 <h6 class="A_TeaserCardTitle">
                   Ремесло и&nbsp;искусство за&nbsp;полярным кругом
                 </h6>
               </div>
-              <div class="M_TeaserCard">
-                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
+
+              <div class="M_TeaserCard -toys">
+                <h6 class="A_TeaserCardTitle">Игрушки с&nbsp;историей</h6>
               </div>
             </div>
           </div>
