--- a/src/crafts/tverskaya-lace.html
+++ b/src/crafts/tverskaya-lace.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
 
     <!-- Primary Meta Tags -->
-    <title> Тверская вышивка • Ремёсла России</title>
+    <title>Тверская вышивка • Ремёсла России</title>
     <meta name="title" content="Тверская вышивка • Ремёсла России" />
     <meta
       name="description"
@@ -18,10 +18,7 @@
       property="og:url"
       content="https://russiancrafts.adc.ac/crafts/tverskaya-lace"
     />
-    <meta
-      property="og:title"
-      content="Тверская вышивка • Ремёсла России"
-    />
+    <meta property="og:title" content="Тверская вышивка • Ремёсла России" />
     <meta
       property="og:description"
       content="Материал о тверской вышивке. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
@@ -76,14 +73,14 @@
 
       <div class="W_CraftLeadTitleDescription">
         <h1 class="A_CraftLeadTitle -Tverskaya-lace">
-            Тверская вышивка
+          Тверская вышивка
         </h1>
 
         <div class="M_CraftLeadDescription">
           <a class="W_CraftLeadDescriptionMap" href="../map.html"
             ><div class="Q_Icon -MapPoint -size48x48"></div>
             <p class="A_CraftLeadDescriptionLocation">
-                Ведное, Тверская обл.
+              Ведное, Тверская обл.
             </p></a
           >
           <div class="C_CraftLeadDescriptionTags">
@@ -99,9 +96,10 @@
       <section class="W_CraftContent -Center">
         <div class="M_CraftAbout">
           <h5 class="A_CraftAboutText -w580">
-            Вышивки эти&nbsp;&mdash; цветочный хоровод, морозное кружево 
-            на&nbsp;стекле, нежная мелодия для серебряной флейты, некое слияние воздушности, 
-            чистоты и&nbsp;изящества. Трудно поверить, что такой эффект достигали при помощи обычной иголки и&nbsp;простых ниток.
+            Вышивки эти&nbsp;&mdash; цветочный хоровод, морозное кружево
+            на&nbsp;стекле, нежная мелодия для серебряной флейты, некое слияние
+            воздушности, чистоты и&nbsp;изящества. Трудно поверить, что такой
+            эффект достигали при помощи обычной иголки и&nbsp;простых ниток.
           </h5>
           <img
             class="Q_CraftAboutImage -w380"
@@ -114,11 +112,14 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Особенности</h2>
             <p class="A_CraftBodyText -w580">
-                В&nbsp;Тверской вышивке преобладают зооморфные 
-                и&nbsp;антропоморфные мотивы. На&nbsp;тканях этого региона представлены силуэты лошадей и&nbsp;птиц. 
-                Эти изображения были героями почти всех свадебных и&nbsp;похоронных полотенец. Отражение в&nbsp;вышивке 
-                Твери нашли также растительные мотивы. Среди них самым популярным было Древо Жизни. Этот мотив редко выступал 
-                самостоятельно, чаще соединялся с&nbsp;орнаментом представляющим разных животных.
+              В&nbsp;Тверской вышивке преобладают зооморфные
+              и&nbsp;антропоморфные мотивы. На&nbsp;тканях этого региона
+              представлены силуэты лошадей и&nbsp;птиц. Эти изображения были
+              героями почти всех свадебных и&nbsp;похоронных полотенец.
+              Отражение в&nbsp;вышивке Твери нашли также растительные мотивы.
+              Среди них самым популярным было Древо Жизни. Этот мотив редко
+              выступал самостоятельно, чаще соединялся с&nbsp;орнаментом
+              представляющим разных животных.
             </p>
           </div>
 
@@ -156,10 +157,12 @@
             <div class="M_CraftBodyTexts -Left100">
               <h2 class="A_CraftBodySubtitle">История</h2>
               <p class="A_CraftBodyText -w580">
-                Самобытные традиции вышивки Тверского края корнями уходят в&nbsp;далекую старину.
-                В&nbsp;Тверской области одним из&nbsp;центров вышивального промысла было село Ведное, 
-                где жили потомственные вышивальщицы. Изысканный узор прозрачной ведновской строчки всегда приводил 
-                в&nbsp;восхищение ценителей художественной вышивки.
+                Самобытные традиции вышивки Тверского края корнями уходят
+                в&nbsp;далекую старину. В&nbsp;Тверской области одним
+                из&nbsp;центров вышивального промысла было село Ведное, где жили
+                потомственные вышивальщицы. Изысканный узор прозрачной
+                ведновской строчки всегда приводил в&nbsp;восхищение ценителей
+                художественной вышивки.
               </p>
             </div>
             <div class="M_CraftBodyMap">
@@ -187,9 +190,11 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Техника изготовления</h2>
             <p class="A_CraftBodyText -w680">
-                Тверская вышивка выполняется в&nbsp;основном тонкими счетными швами, 
-                а&nbsp;они должны крепиться к&nbsp;прочному основанию. Можно внимательно рассмотреть кусочки 
-                ткани и&nbsp;выбрать&nbsp;те, которые подходят для Тверской народной вышивки.
+              Тверская вышивка выполняется в&nbsp;основном тонкими счетными
+              швами, а&nbsp;они должны крепиться к&nbsp;прочному основанию.
+              Можно внимательно рассмотреть кусочки ткани
+              и&nbsp;выбрать&nbsp;те, которые подходят для Тверской народной
+              вышивки.
             </p>
           </div>
 
@@ -224,32 +229,43 @@
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 1/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Шов тамбура имеет вид цепочки, звенья которой заходят одна в&nbsp;другую. Выведите иглу с&nbsp;нитью 
-                    на&nbsp;лицевую сторону ткани и&nbsp;перебросьте нить петлей налево. Заведите петлю в&nbsp;месте вывода 
-                    нити на&nbsp;поверхности ткани&nbsp;и, направляя иглу на&nbsp;себя, приколите ткань иглой в&nbsp;середине петли. 
-                    Вытяните нить и&nbsp;затяните ее&nbsp;правой рукой до&nbsp;прокола ткани. Нанизывайте последующие петли тамбура 
-                    таким&nbsp;же способом, при этом следите, что&nbsp;бы все проколы были на&nbsp;одинаковом расстоянии.
+                    Шов тамбура имеет вид цепочки, звенья которой заходят одна
+                    в&nbsp;другую. Выведите иглу с&nbsp;нитью на&nbsp;лицевую
+                    сторону ткани и&nbsp;перебросьте нить петлей налево.
+                    Заведите петлю в&nbsp;месте вывода нити на&nbsp;поверхности
+                    ткани&nbsp;и, направляя иглу на&nbsp;себя, приколите ткань
+                    иглой в&nbsp;середине петли. Вытяните нить и&nbsp;затяните
+                    ее&nbsp;правой рукой до&nbsp;прокола ткани. Нанизывайте
+                    последующие петли тамбура таким&nbsp;же способом, при этом
+                    следите, что&nbsp;бы все проколы были на&nbsp;одинаковом
+                    расстоянии.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 2/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Сделайте прокол. Откиньте нить налево. Проколите ткань иглой у&nbsp;края контура узора. 
-                    Затянув петлю, откиньте нить направо и&nbsp;перенесите иглу 
-                    к&nbsp;противоположному краю узора. Захватите иглой выведенную на&nbsp;лицевую сторону нить, 
-                    проколите ткань иглой и&nbsp;здесь тоже затяните петлю.
+                    Сделайте прокол. Откиньте нить налево. Проколите ткань иглой
+                    у&nbsp;края контура узора. Затянув петлю, откиньте нить
+                    направо и&nbsp;перенесите иглу к&nbsp;противоположному краю
+                    узора. Захватите иглой выведенную на&nbsp;лицевую сторону
+                    нить, проколите ткань иглой и&nbsp;здесь тоже затяните
+                    петлю.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 3/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Проколите ткань иглой у&nbsp;правого края контура, откинув нить влево. Иглу выведите 
-                    не&nbsp;в&nbsp;середине петли, как это делали в&nbsp;простом тамбурном шве, а&nbsp;на&nbsp;левом краю контура. 
-                    Не&nbsp;затягивая сильно нить, придайте петле прямоугольное очертание 
-                    при помощи иглы, вновь вкалываемой в&nbsp;правый край контура и&nbsp;направляемой
-                    к&nbsp;левому краю. По&nbsp;краям орнамента можно использовать шов &laquo;крест&raquo; или &laquo;двойной крест&raquo;.
+                    Проколите ткань иглой у&nbsp;правого края контура, откинув
+                    нить влево. Иглу выведите не&nbsp;в&nbsp;середине петли, как
+                    это делали в&nbsp;простом тамбурном шве,
+                    а&nbsp;на&nbsp;левом краю контура. Не&nbsp;затягивая сильно
+                    нить, придайте петле прямоугольное очертание при помощи
+                    иглы, вновь вкалываемой в&nbsp;правый край контура
+                    и&nbsp;направляемой к&nbsp;левому краю. По&nbsp;краям
+                    орнамента можно использовать шов &laquo;крест&raquo; или
+                    &laquo;двойной крест&raquo;.
                   </p>
                 </div>
               </div>
@@ -262,8 +278,11 @@
 
           <ul class="C_CraftBodyListItems">
             <li class="A_CraftBodyListItem">
-              <a href="https://jury-tver.livejournal.com/166980.html" target="_blank"
-                >Всероссийская выставка &laquo;Искусство современной вышивки&raquo; в&nbsp;Твери</a
+              <a
+                href="https://jury-tver.livejournal.com/166980.html"
+                target="_blank"
+                >Всероссийская выставка &laquo;Искусство современной
+                вышивки&raquo; в&nbsp;Твери</a
               >
             </li>
           </ul>
@@ -311,18 +330,20 @@
               Связанные подборки и&nbsp;статьи
             </h2>
             <div class="C_TeaserCards">
-              <div class="M_TeaserCard">
+              <div class="M_TeaserCard -bones">
                 <h6 class="A_TeaserCardTitle">
                   У&nbsp;каких народов есть резьба по&nbsp;кости
                 </h6>
               </div>
-              <div class="M_TeaserCard">
+
+              <div class="M_TeaserCard -nord">
                 <h6 class="A_TeaserCardTitle">
                   Ремесло и&nbsp;искусство за&nbsp;полярным кругом
                 </h6>
               </div>
-              <div class="M_TeaserCard">
-                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
+
+              <div class="M_TeaserCard -toys">
+                <h6 class="A_TeaserCardTitle">Игрушки с&nbsp;историей</h6>
               </div>
             </div>
           </div>
