--- a/src/crafts/vologodskoe-lace.html
+++ b/src/crafts/vologodskoe-lace.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
 
     <!-- Primary Meta Tags -->
-    <title> Вологодское кружево • Ремёсла России</title>
+    <title>Вологодское кружево • Ремёсла России</title>
     <meta name="title" content="Вологодское кружево • Ремёсла России" />
     <meta
       name="description"
@@ -18,10 +18,7 @@
       property="og:url"
       content="https://russiancrafts.adc.ac/crafts/skopinsk-ceramic"
     />
-    <meta
-      property="og:title"
-      content="Вологодское кружево • Ремёсла России"
-    />
+    <meta property="og:title" content="Вологодское кружево • Ремёсла России" />
     <meta
       property="og:description"
       content="Материал о вологодском кружеве. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
@@ -76,14 +73,14 @@
 
       <div class="W_CraftLeadTitleDescription">
         <h1 class="A_CraftLeadTitle -Vologodskoe-lace">
-            Вологодское кружево
+          Вологодское кружево
         </h1>
 
         <div class="M_CraftLeadDescription">
           <a class="W_CraftLeadDescriptionMap" href="../map.html"
             ><div class="Q_Icon -MapPoint -size48x48"></div>
             <p class="A_CraftLeadDescriptionLocation">
-                Вологда, Вологодская губер.
+              Вологда, Вологодская губер.
             </p></a
           >
           <div class="C_CraftLeadDescriptionTags">
@@ -99,10 +96,12 @@
       <section class="W_CraftContent -Center">
         <div class="M_CraftAbout">
           <h5 class="A_CraftAboutText -w580">
-            Вологодское кружево обладает особой самобытной красотой. 
-            На&nbsp;развитие орнаментального искусства кружева большое влияние оказали узоры резьбы по&nbsp;
-            дереву, орнаменты ткачества, старинные вышивки. Особенно ажурная вышивка &laquo;вологодское стекло&raquo; 
-            с&nbsp;разнообразными &laquo;снежинками&raquo; и&nbsp;&laquo;паучками&raquo; на&nbsp;сквозных фонах.
+            Вологодское кружево обладает особой самобытной красотой.
+            На&nbsp;развитие орнаментального искусства кружева большое влияние
+            оказали узоры резьбы по&nbsp; дереву, орнаменты ткачества, старинные
+            вышивки. Особенно ажурная вышивка &laquo;вологодское стекло&raquo;
+            с&nbsp;разнообразными &laquo;снежинками&raquo;
+            и&nbsp;&laquo;паучками&raquo; на&nbsp;сквозных фонах.
           </h5>
           <img
             class="Q_CraftAboutImage -w380"
@@ -115,9 +114,11 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Особенности</h2>
             <p class="A_CraftBodyText -w580">
-                Особенностью вологодских кружев является плотная, непрерывная и&nbsp;одинаковая 
-                по&nbsp;ширине полотнянка, которая своими плавными изгибами формирует чёткий и&nbsp;легко читающийся узор. 
-                За&nbsp;счёт такой полотнянки вологодское кружево получается плотнее, чем другие кружева (например, елецкое кружево).
+              Особенностью вологодских кружев является плотная, непрерывная
+              и&nbsp;одинаковая по&nbsp;ширине полотнянка, которая своими
+              плавными изгибами формирует чёткий и&nbsp;легко читающийся узор.
+              За&nbsp;счёт такой полотнянки вологодское кружево получается
+              плотнее, чем другие кружева (например, елецкое кружево).
             </p>
           </div>
 
@@ -155,11 +156,15 @@
             <div class="M_CraftBodyTexts -Left100">
               <h2 class="A_CraftBodySubtitle">История</h2>
               <p class="A_CraftBodyText -w580">
-                Начало промысла относится к&nbsp;1820&nbsp;году, когда близ Вологды 
-                в&nbsp;имениях помещиков крепостные стали выплетать отделки 
-                к&nbsp;платьям и&nbsp;белью, подражая западноевропейским.
-                По&nbsp;официальным исследованиям (С.&nbsp;А.&nbsp;Давыдовой) установлено, что во&nbsp;времена крепостного права во&nbsp;всех значимых помещичьих усадьбах губернии находились кружевные &laquo;фабрики&raquo;, поставлявшие кружевные изделия 
-                в&nbsp;Санкт-Петербург и&nbsp;Москву.
+                Начало промысла относится к&nbsp;1820&nbsp;году, когда близ
+                Вологды в&nbsp;имениях помещиков крепостные стали выплетать
+                отделки к&nbsp;платьям и&nbsp;белью, подражая
+                западноевропейским. По&nbsp;официальным исследованиям
+                (С.&nbsp;А.&nbsp;Давыдовой) установлено, что во&nbsp;времена
+                крепостного права во&nbsp;всех значимых помещичьих усадьбах
+                губернии находились кружевные &laquo;фабрики&raquo;,
+                поставлявшие кружевные изделия в&nbsp;Санкт-Петербург
+                и&nbsp;Москву.
               </p>
             </div>
             <div class="M_CraftBodyMap">
@@ -187,8 +192,9 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Техника изготовления</h2>
             <p class="A_CraftBodyText -w680">
-                Для того чтобы конечный результат действительно порадовал, необходимо ответственно подойти 
-                к&nbsp;каждому из&nbsp;этапов плетения вологодского кружева
+              Для того чтобы конечный результат действительно порадовал,
+              необходимо ответственно подойти к&nbsp;каждому из&nbsp;этапов
+              плетения вологодского кружева
             </p>
           </div>
 
@@ -223,25 +229,30 @@
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 1/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Прежде всего, нужно подготовить сколок, то&nbsp;есть эскиз того, что должно получиться по&nbsp;завершении работы над изделием.
+                    Прежде всего, нужно подготовить сколок, то&nbsp;есть эскиз
+                    того, что должно получиться по&nbsp;завершении работы над
+                    изделием.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 2/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Затем сколок закрепляют на&nbsp;мягкой подушке-валике. 
-                    В&nbsp;старину такие подушечки набивали сеном или опилками. 
-                    Рисунок на&nbsp;сколок наносится линиями и&nbsp;точками, в&nbsp;которые вертикально втыкают булавки.
+                    Затем сколок закрепляют на&nbsp;мягкой подушке-валике.
+                    В&nbsp;старину такие подушечки набивали сеном или опилками.
+                    Рисунок на&nbsp;сколок наносится линиями и&nbsp;точками,
+                    в&nbsp;которые вертикально втыкают булавки.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 3/3</p>
                   <p class="A_CraftBodyText -w780">
-                    Вологодское кружево плетут коклюшками, на&nbsp;которые намотаны нитки. 
-                    Мастерица перебрасывает коклюшки в&nbsp;руках, обвивает булавки нитками, 
-                    и&nbsp;по&nbsp;мере выполнения рисунка переставляет булавки в&nbsp;другие точки..
+                    Вологодское кружево плетут коклюшками, на&nbsp;которые
+                    намотаны нитки. Мастерица перебрасывает коклюшки
+                    в&nbsp;руках, обвивает булавки нитками, и&nbsp;по&nbsp;мере
+                    выполнения рисунка переставляет булавки в&nbsp;другие
+                    точки..
                   </p>
                 </div>
               </div>
@@ -254,7 +265,9 @@
 
           <ul class="C_CraftBodyListItems">
             <li class="A_CraftBodyListItem">
-              <a href="https://www.vologdamuseum.ru/content?id=131" target="_blank"
+              <a
+                href="https://www.vologdamuseum.ru/content?id=131"
+                target="_blank"
                 >Музей кружева</a
               >
             </li>
@@ -303,18 +316,20 @@
               Связанные подборки и&nbsp;статьи
             </h2>
             <div class="C_TeaserCards">
-              <div class="M_TeaserCard">
+              <div class="M_TeaserCard -bones">
                 <h6 class="A_TeaserCardTitle">
                   У&nbsp;каких народов есть резьба по&nbsp;кости
                 </h6>
               </div>
-              <div class="M_TeaserCard">
+
+              <div class="M_TeaserCard -nord">
                 <h6 class="A_TeaserCardTitle">
                   Ремесло и&nbsp;искусство за&nbsp;полярным кругом
                 </h6>
               </div>
-              <div class="M_TeaserCard">
-                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
+
+              <div class="M_TeaserCard -toys">
+                <h6 class="A_TeaserCardTitle">Игрушки с&nbsp;историей</h6>
               </div>
             </div>
           </div>
