--- a/src/crafts/gorodets-painting.html
+++ b/src/crafts/gorodets-painting.html
@@ -165,7 +165,7 @@
                 галерее. А&nbsp;после войны в&nbsp;селе Курцево под руководством
                 художника Аристарха Коновалова открыли артель
                 &laquo;Стахановец&raquo;, которая через несколько лет
-                превратилась в&nbsp;фабрику
+                превратилась в&nbsp;фабрику.
               </p>
             </div>
             <div class="M_CraftBodyMap">
