--- a/src/crafts/rakul-painting.html
+++ b/src/crafts/rakul-painting.html
@@ -161,7 +161,7 @@
                 история не&nbsp;такая древняя, как у&nbsp;многих других течений:
                 ранние работы относят к&nbsp;середине 19&nbsp;века,
                 а&nbsp;затухание промысла связывают с&nbsp;30-ми годами прошлого
-                столетия.
+                века.
               </p>
             </div>
 
