--- a/src/articles.html
+++ b/src/articles.html
@@ -82,7 +82,7 @@
         <a class="M_CraftsCard" data-tags="Общество" href="#">
           <img
             class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
+            src="images/articles/article2.jpg"
             alt="У каких народов есть резьба по кости"
           />
           <p class="A_CraftsCardTitle">
@@ -93,25 +93,16 @@
         <a class="M_CraftsCard" data-tags="Общество" href="#">
           <img
             class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
+            src="images/articles/article1.jpg"
             alt="5 малоизвестных ремёсел Дагестана"
           />
           <p class="A_CraftsCardTitle">5 малоизвестных ремёсел Дагестана</p>
         </a>
 
-        <a class="M_CraftsCard" data-tags="Мода,Дизайн" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
-            alt="Лагерфельд и кокошники"
-          />
-          <p class="A_CraftsCardTitle">Лагерфельд и&nbsp;кокошники</p>
-        </a>
-
         <a class="M_CraftsCard" data-tags="История,Дизайн" href="#">
           <img
             class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
+            src="images/articles/article3.jpg"
             alt="Выбираем сервиз с историей"
           />
           <p class="A_CraftsCardTitle">Выбираем сервиз с&nbsp;историей</p>
@@ -120,7 +111,7 @@
         <a class="M_CraftsCard" data-tags="История" href="#">
           <img
             class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
+            src="images/articles/article4.jpg"
             alt="Традиционные детские игрушки"
           />
           <p class="A_CraftsCardTitle">Традиционные детские игрушки</p>
@@ -129,61 +120,16 @@
         <a class="M_CraftsCard" data-tags="История,Дизайн" href="#">
           <img
             class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
+            src="images/articles/article5.jpg"
             alt="Русская вышивка и пиксель-арт?"
           />
           <p class="A_CraftsCardTitle">Русская вышивка и&nbsp;пиксель-арт?</p>
         </a>
 
-        <a class="M_CraftsCard" data-tags="История,Дизайн" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
-            alt="Переосмысление самовара"
-          />
-          <p class="A_CraftsCardTitle">Переосмысление самовара</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="История,Место" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
-            alt="Ремесленные центры Урала"
-          />
-          <p class="A_CraftsCardTitle">Ремесленные центры Урала</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="История,Дизайн,Общество" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
-            alt="Как матрёшка стала символом России"
-          />
-          <p class="A_CraftsCardTitle">Как матрёшка стала символом России</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="Дизайн" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
-            alt="Орнамент в интерьере"
-          />
-          <p class="A_CraftsCardTitle">Орнамент в&nbsp;интерьере</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="Выставки,Место" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
-            alt="Где в Москве увидеть ремёсла"
-          />
-          <p class="A_CraftsCardTitle">Где в&nbsp;Москве увидеть ремёсла</p>
-        </a>
-
         <a class="M_CraftsCard" data-tags="История,Общество" href="#">
           <img
             class="A_CraftsCardPic"
-            src="images/articles/Targaryen-and-kokoshnik.jpeg"
+            src="images/articles/article6.jpg"
             alt="Искусство за полярным кругом"
           />
           <p class="A_CraftsCardTitle">Искусство за&nbsp;полярным кругом</p>
