--- a/src/search.html
+++ b/src/search.html
@@ -45,13 +45,13 @@
   </head>
 
   <body class="-white">
-    <div class="O_Header">
+    <div class="O_Header -white">
       <div class="M_HeaderNav">
-        <a class="A_Logo" href="/">Ремёсла России</a>
+        <a class="A_Logo -black" href="/">Ремёсла России</a>
         <div class="C_HeaderNavSections">
-          <a class="A_HeaderSection" href="./crafts.html">Библиотека</a>
-          <a class="A_HeaderSection" href="./map.html">Карта</a>
-          <a class="A_HeaderSection" href="./articles.html"
+          <a class="A_HeaderSection -black" href="./crafts.html">Библиотека</a>
+          <a class="A_HeaderSection -black" href="./map.html">Карта</a>
+          <a class="A_HeaderSection -black" href="./articles.html"
             >Статьи и подборки</a
           >
           <a class="Q_Icon -size28x28 -Search" href="./search"></a>
