--- a/src/map.html
+++ b/src/map.html
@@ -120,7 +120,6 @@
         </div>
       </div>
     </div> -->
-    <!-- тут будет карта с мэпбокс
-    <a href="./">На главную</a> -->
+    <!-- TEST -->
   </body>
 </html>
