--- a/src/crafts/tverskaya-lace.html
+++ b/src/crafts/tverskaya-lace.html
@@ -124,7 +124,7 @@
           </div>
 
           <div class="C_CraftBodyImages">
-            <div class="C_CraftBodyImagesRow">
+            <div class="C_CraftBodyImagesRow -w290">
               <img
                 class="Q_CraftBodyImage -w480"
                 src="../images/craft/tverskaya-lace/body-img1.jpg"
