--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,15 @@
           <a class="A_HeaderSection" href="./articles.html"
             >Статьи и подборки</a
           >
+          <div class="W_Search">
+            <div class="O_SearchBar">
+              <div class="M_SearchForm">
+                <input class="A_Input" placeholder="Я хочу найти..." value>
+                <div class="A_Button resetField">X</div>
+                <div class="A_Button disabled primary"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
