--- a/src/crafts/gorodets-painting.html
+++ b/src/crafts/gorodets-painting.html
@@ -18,7 +18,10 @@
       property="og:url"
       content="https://russiancrafts.adc.ac/crafts/gorodets-painting"
     />
-    <meta property="og:title" content="Городецкая роспись • Ремёсла России" />
+    <meta
+      property="og:title"
+      content="Городецкая роспись • Ремёсла России"
+    />
     <meta
       property="og:description"
       content="Материал о городецской росписи. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
@@ -80,7 +83,7 @@
           <a class="W_CraftLeadDescriptionMap" href="../map.html"
             ><div class="Q_Icon -MapPoint -size48x48"></div>
             <p class="A_CraftLeadDescriptionLocation">
-              Поволжье, район Городец
+                Поволжье, район Городец
             </p></a
           >
           <div class="C_CraftLeadDescriptionTags">
@@ -95,9 +98,8 @@
       <section class="W_CraftContent -Center">
         <div class="M_CraftAbout">
           <h5 class="A_CraftAboutText -w580">
-            Городецкая роспись&nbsp;&mdash; это русский народный художественный
-            промысел, особый вид росписи по&nbsp;дереву, который появился
-            в&nbsp;середине XIX века в&nbsp;Нижегородской губернии.
+            Городецкая роспись&nbsp;&mdash; это русский народный художественный промысел, 
+            особый вид росписи по&nbsp;дереву, который появился в&nbsp;середине XIX века в&nbsp;Нижегородской губернии.
           </h5>
           <img
             class="Q_CraftAboutImage -w380"
@@ -110,14 +112,11 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Особенности</h2>
             <p class="A_CraftBodyText -w580">
-              Городецкие прялки отличались от&nbsp;обычных тем, что
-              их&nbsp;не&nbsp;вытачивали из&nbsp;цельного куска дерева,
-              а&nbsp;изготавливали из&nbsp;двух частей&nbsp;&mdash; гребня
-              и&nbsp;донца. Донце представляло собой широкую доску:
-              с&nbsp;одного конца она сужалась, и&nbsp;в&nbsp;этом месте делали
-              отверстие для ножки гребня. Как раз донце и&nbsp;было расписным:
-              когда прялкой не&nbsp;пользовались, ее&nbsp;вешали на&nbsp;стену
-              в&nbsp;качестве украшения.
+                Городецкие прялки отличались от&nbsp;обычных тем, 
+                что их&nbsp;не&nbsp;вытачивали из&nbsp;цельного куска дерева, 
+                а&nbsp;изготавливали из&nbsp;двух частей&nbsp;&mdash; гребня и&nbsp;донца. Донце представляло собой широкую доску: 
+                с&nbsp;одного конца она сужалась, и&nbsp;в&nbsp;этом месте делали отверстие для ножки гребня. Как раз донце и&nbsp;было расписным: когда прялкой 
+                не&nbsp;пользовались, ее&nbsp;вешали на&nbsp;стену в&nbsp;качестве украшения.
             </p>
           </div>
 
@@ -155,17 +154,10 @@
             <div class="M_CraftBodyTexts -Left100">
               <h2 class="A_CraftBodySubtitle">История</h2>
               <p class="A_CraftBodyText -w580">
-                Расцвет промысла пришелся на&nbsp;90-е годы XIX&nbsp;века,
-                а&nbsp;уже в&nbsp;начале&nbsp;ХХ столетия интерес к&nbsp;ремеслу
-                начал угасать. Однако в&nbsp;1935 году художник Иван Овешков
-                открыл общественную мастерскую в&nbsp;деревне Косково, где начал
-                профессионально обучать молодых мастеров городецкой росписи. Уже
-                через два года работы его учеников экспонировались
-                на&nbsp;выставке народного творчества в&nbsp;Третьяковской
-                галерее. А&nbsp;после войны в&nbsp;селе Курцево под руководством
-                художника Аристарха Коновалова открыли артель
-                &laquo;Стахановец&raquo;, которая через несколько лет
-                превратилась в&nbsp;фабрику.
+                Расцвет промысла пришелся на&nbsp;90-е годы XIX&nbsp;века, 
+                а&nbsp;уже в&nbsp;начале&nbsp;ХХ столетия интерес к&nbsp;ремеслу начал угасать. Однако в&nbsp;1935 году художник Иван Овешков открыл общественную мастерскую в&nbsp;деревне Косково, где начал профессионально обучать молодых мастеров городецкой росписи. Уже через два года работы его учеников экспонировались на&nbsp;выставке народного творчества 
+                в&nbsp;Третьяковской галерее. А&nbsp;после войны в&nbsp;селе Курцево 
+                под руководством художника Аристарха Коновалова открыли артель &laquo;Стахановец&raquo;, которая через несколько лет превратилась в&nbsp;фабрику
               </p>
             </div>
             <div class="M_CraftBodyMap">
@@ -193,11 +185,9 @@
           <div class="M_CraftBodyTexts -Left200">
             <h2 class="A_CraftBodySubtitle">Техника изготовления</h2>
             <p class="A_CraftBodyText -w680">
-              Современные мастера для создания картин в&nbsp;данной технике
-              используют краску&nbsp;&mdash; темпера. Ее&nbsp;можно заменить
-              гуашью с&nbsp;добавлением клея ПВА. Из&nbsp;каждого выбранного
-              цвета создают два оттенка: один разбеленный, а&nbsp;другой
-              насыщенный.
+                Современные мастера для создания картин 
+                в&nbsp;данной технике используют краску&nbsp;&mdash; темпера. 
+                Ее&nbsp;можно заменить гуашью с&nbsp;добавлением клея ПВА. Из&nbsp;каждого выбранного цвета создают два оттенка: один разбеленный, а&nbsp;другой насыщенный.
             </p>
           </div>
 
@@ -223,10 +213,10 @@
                     alt=""
                   />
                   <img
-                    class="Q_SliderPic"
-                    src="../images/craft/gorodets-painting/slider-img4.jpg"
-                    alt=""
-                  />
+                  class="Q_SliderPic"
+                  src="../images/craft/gorodets-painting/slider-img4.jpg"
+                  alt=""
+                />
                 </div>
               </div>
               <div class="Q_Icon -ArrowRight -size48x48"></div>
@@ -237,38 +227,32 @@
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 1/4</p>
                   <p class="A_CraftBodyText -w780">
-                    Роспись можно выполнять сразу на&nbsp;деревянной основе или
-                    предварительно покрыть ее&nbsp;желтой, красной или черной
-                    краской.
+                    Роспись можно выполнять сразу на&nbsp;деревянной основе или предварительно покрыть ее&nbsp;желтой, красной или черной краской.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 2/4</p>
                   <p class="A_CraftBodyText -w780">
-                    Тонкими линиями с&nbsp;помощью карандаша намечается будущий
-                    узор. Делают подобные действия для основных элементов.
+                    Тонкими линиями с&nbsp;помощью карандаша намечается будущий узор. Делают подобные действия для основных элементов.
                   </p>
                 </div>
 
                 <div class="W_SliderDescriptionTexts">
                   <p class="A_SliderDescriptionCounter">этап 3/4</p>
                   <p class="A_CraftBodyText -w780">
-                    Широкой кистью наносят основу цветков в&nbsp;виде пятен
-                    правильной круглой формы. Сверху делают повторные мазки
-                    более темным оттенком. После завершения крупных элементов
+                    Широкой кистью наносят основу цветков в&nbsp;виде пятен правильной круглой формы. 
+                    Сверху делают повторные мазки более темным оттенком. После завершения крупных элементов 
                     с&nbsp;помощью нескольких мазков формируют листочки.
                   </p>
                 </div>
                 <div class="W_SliderDescriptionTexts">
-                  <p class="A_SliderDescriptionCounter">этап 4/4</p>
-                  <p class="A_CraftBodyText -w780">
-                    На&nbsp;заключительном этапе с&nbsp;помощью тонкой кисти
-                    наносят штрихи и&nbsp; точки черного и&nbsp;белого
-                    цвета.После высыхания все изделие покрывают бесцветным
-                    лаком.
-                  </p>
-                </div>
+                    <p class="A_SliderDescriptionCounter">этап 4/4</p>
+                    <p class="A_CraftBodyText -w780">
+                        На&nbsp;заключительном этапе с&nbsp;помощью тонкой кисти наносят штрихи и&nbsp;
+                        точки черного и&nbsp;белого цвета.После высыхания все изделие покрывают бесцветным лаком.
+                    </p>
+                  </div>
               </div>
             </div>
           </div>
@@ -286,8 +270,7 @@
 
             <li class="A_CraftBodyListItem">
               <a href="https://vk.com/center_remesel" target="_blank"
-                >Центр народных художественных промыслов и&nbsp;ремесел
-                (Рязанская область)</a
+                >Центр народных художественных промыслов и&nbsp;ремесел (Рязанская область)</a
               >
             </li>
           </ul>
@@ -335,20 +318,18 @@
               Связанные подборки и&nbsp;статьи
             </h2>
             <div class="C_TeaserCards">
-              <div class="M_TeaserCard -bones">
+              <div class="M_TeaserCard">
                 <h6 class="A_TeaserCardTitle">
                   У&nbsp;каких народов есть резьба по&nbsp;кости
                 </h6>
               </div>
-
-              <div class="M_TeaserCard -nord">
+              <div class="M_TeaserCard">
                 <h6 class="A_TeaserCardTitle">
                   Ремесло и&nbsp;искусство за&nbsp;полярным кругом
                 </h6>
               </div>
-
-              <div class="M_TeaserCard -toys">
-                <h6 class="A_TeaserCardTitle">Игрушки с&nbsp;историей</h6>
+              <div class="M_TeaserCard">
+                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
               </div>
             </div>
           </div>
@@ -357,7 +338,8 @@
             <div class="M_CraftEndTags">
               <h2 class="A_CraftBodySubtitle">Тэги:</h2>
               <p class="A_CraftEndTagsSearch">
-                <span><a href="#">роспись</a></span>
+                <span><a href="#">роспись</a></span
+                >
               </p>
             </div>
 
