--- a/src/crafts/uelen-bone-carving.html
+++ b/src/crafts/uelen-bone-carving.html
@@ -70,27 +70,31 @@
     <div class="S_CraftPage">
       <section class="O_CraftLead yellow">
         <div class="C_LeadStrings">
-          <h6 class="A_LeadString">
-            Визуальная&nbsp;культура&nbsp;&nbsp;&nbsp;Традиции&nbsp;и&nbsp;современность&nbsp;&nbsp;&nbsp;Самобытность&nbsp;стиля&nbsp;&nbsp;&nbsp;Народное&nbsp;творчесвто
+          <h6 class="A_LeadStringCraftPageLineTop">
+            Визуальная культура&nbsp;&nbsp;&nbsp;Традиции
+            и&nbsp;современность&nbsp;&nbsp;&nbsp;Самобытность
+            стиля&nbsp;&nbsp;&nbsp;Народное творчесвто&nbsp;&nbsp;&nbsp;
           </h6>
-          <div class="C_LeadStringsTitle">
+          <div class="C_LeadStringsTitle Uelen-bone-carving">
             <h1 class="A_LeadStringTitle Uelen-bone-carving">
-              Уэленская&nbsp;резьба&nbsp;по&nbsp;кости
+              Уэленская резьба по кости
             </h1>
             <h1 class="A_LeadStringTitle Uelen-bone-carving">
-              Уэленская&nbsp;резьба&nbsp;по&nbsp;кости
+              Уэленская резьба по кости
             </h1>
             <h1 class="A_LeadStringTitle Uelen-bone-carving">
-              Уэленская&nbsp;резьба&nbsp;по&nbsp;кости
+              Уэленская резьба по кости
             </h1>
           </div>
-          <h6 class="A_LeadString">
-            Визуальная&nbsp;культура&nbsp;&nbsp;&nbsp;Традиции&nbsp;и&nbsp;современность&nbsp;&nbsp;&nbsp;Самобытность&nbsp;стиля&nbsp;&nbsp;&nbsp;Народное&nbsp;творчесвто
+          <h6 class="A_LeadStringCraftPageLineBottom">
+            Самобытность стиля&nbsp;&nbsp;&nbsp;Народное
+            творчесвто&nbsp;&nbsp;&nbsp;Визуальная
+            культура&nbsp;&nbsp;&nbsp;Традиции и современность&nbsp;&nbsp;&nbsp;
           </h6>
         </div>
-        <!-- <div class="W_LeadImage"> -->
-        <div class="Q_CraftLeadImage Uelen-bone-carving"></div>
-        <!-- </div> -->
+        <div class="W_LeadImage">
+          <div class="Q_CraftLeadImage Uelen-bone-carving"></div>
+        </div>
       </section>
 
       <section class="O_CraftAbout">
