--- a/src/crafts/abashevskaya-toy.html
+++ b/src/crafts/abashevskaya-toy.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="icon" href="../favicon.ico" />
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
 
     <!-- Primary Meta Tags -->
     <title>Абашевская игрушка • Ремёсла России</title>
